--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <audio src="sound/explain.mp3" autoplay loop></audio>
   <section>
     <h1>참가 동의서</h1>
     <p>제 1항, 참가자는 임의로 게임을 중단할 수 없다.</p>
