--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,6 +22,7 @@
             </form>
         </section>
     </div>
+    <audio src="sound/squid_bgm.mp3" autoplay loop preload="auto"></audio>
 </body>
 
 </html>
