--- a/src/main/resources/static/ranking.html
+++ b/src/main/resources/static/ranking.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./js/ranking.js" defer></script>
     <title>무궁화 게임 랭킹</title>
 </head>
 
