--- a/src/main/resources/static/ranking.html
+++ b/src/main/resources/static/ranking.html
@@ -7,13 +7,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./js/ranking.js" defer></script>
+    <link rel="stylesheet" href="css/ranking.css">
     <title>무궁화 게임 랭킹</title>
 </head>
 
 <body>
-    <li id="rankList">
+    <section id="table">
+        <h1>명예의 전당</h1>
+        <li id="category">
+            <div>순위</div>
+            <div>이름</div>
+            <div>시간</div>
+        </li>
+        <ul id="rankList">
+            <li>
+                <div>1위</div>
+                <div>이정훈</div>
+                <div>8.0</div>
+            </li>
+            <li>
+                <div>2위</div>
+                <div>정승균</div>
+                <div>17.0</div>
+            </li>
+            <li>
+                <div>3위</div>
+                <div>이정훈</div>
+                <div>8.0</div>
+            </li>
+            <li>
+                <div>4위</div>
+                <div>정승균</div>
+                <div>17.0</div>
+            </li>
+            <li>
+                <div>5위</div>
+                <div>이정훈</div>
+                <div>8.0</div>
+            </li>
+            <li>
+                <div>6위</div>
+                <div>정승균</div>
+                <div>17.0</div>
+            </li>
+            <li>
+                <div>7위</div>
+                <div>이정훈</div>
+                <div>8.0</div>
+            </li>
+            <li>
+                <div>8위</div>
+                <div>정승균</div>
+                <div>17.0</div>
+            </li>
+            <li>
+                <div>9위</div>
+                <div>이정훈</div>
+                <div>8.0</div>
+            </li>
+            <li>
+                <div>10위</div>
+                <div>정승균</div>
+                <div>17.0</div>
+            </li>
 
-    </li>
+        </ul>
+    </section>
 </body>
 
 </html>
